@@ -161,16 +161,16 @@ DEFINE XORI B2
 DEFINE NANDI B3
 DEFINE NORI B4
 DEFINE XNORI B5
-DEFINE CMPJUMP.G C0
-DEFINE CMPJUMP.GE C1
-DEFINE CMPJUMP.E C2
-DEFINE CMPJUMP.NE C3
-DEFINE CMPJUMP.LE C4
-DEFINE CMPJUMP.L C5
-DEFINE CMPJUMPU.G D0
-DEFINE CMPJUMPU.GE D1
-DEFINE CMPJUMPU.LE D4
-DEFINE CMPJUMPU.L D5
+DEFINE CMPJUMPI.G C0
+DEFINE CMPJUMPI.GE C1
+DEFINE CMPJUMPI.E C2
+DEFINE CMPJUMPI.NE C3
+DEFINE CMPJUMPI.LE C4
+DEFINE CMPJUMPI.L C5
+DEFINE CMPJUMPUI.G D0
+DEFINE CMPJUMPUI.GE D1
+DEFINE CMPJUMPUI.LE D4
+DEFINE CMPJUMPUI.L D5
 
 # 1OPI Group
 DEFINE JUMP.C 2C0
