@@ -183,16 +183,16 @@ void STORER32(struct lilith* vm, struct Instruction* c);
 void JUMP(struct lilith* vm, struct Instruction* c);
 void JUMP_P(struct lilith* vm, struct Instruction* c);
 void JUMP_NP(struct lilith* vm, struct Instruction* c);
-void CMPJUMP_G(struct lilith* vm, struct Instruction* c);
-void CMPJUMP_GE(struct lilith* vm, struct Instruction* c);
-void CMPJUMP_E(struct lilith* vm, struct Instruction* c);
-void CMPJUMP_NE(struct lilith* vm, struct Instruction* c);
-void CMPJUMP_LE(struct lilith* vm, struct Instruction* c);
-void CMPJUMP_L(struct lilith* vm, struct Instruction* c);
-void CMPJUMPU_G(struct lilith* vm, struct Instruction* c);
-void CMPJUMPU_GE(struct lilith* vm, struct Instruction* c);
-void CMPJUMPU_LE(struct lilith* vm, struct Instruction* c);
-void CMPJUMPU_L(struct lilith* vm, struct Instruction* c);
+void CMPJUMPI_G(struct lilith* vm, struct Instruction* c);
+void CMPJUMPI_GE(struct lilith* vm, struct Instruction* c);
+void CMPJUMPI_E(struct lilith* vm, struct Instruction* c);
+void CMPJUMPI_NE(struct lilith* vm, struct Instruction* c);
+void CMPJUMPI_LE(struct lilith* vm, struct Instruction* c);
+void CMPJUMPI_L(struct lilith* vm, struct Instruction* c);
+void CMPJUMPUI_G(struct lilith* vm, struct Instruction* c);
+void CMPJUMPUI_GE(struct lilith* vm, struct Instruction* c);
+void CMPJUMPUI_LE(struct lilith* vm, struct Instruction* c);
+void CMPJUMPUI_L(struct lilith* vm, struct Instruction* c);
 void CMPSKIPI_G(struct lilith* vm, struct Instruction* c);
 void CMPSKIPI_GE(struct lilith* vm, struct Instruction* c);
 void CMPSKIPI_E(struct lilith* vm, struct Instruction* c);
